# scan_segmentation

./: CMakeLists.txt  README.md  dependency.repos  package.xml
.github/workflows/: BuildTest.yaml  ROS2-Eloquent.yaml  ROS2-Foxy.yaml  ROS2-Galactic.yaml
include/scan_segmentation/: scan_segmentation_component.hpp
src/: scan_segmentation_component.cpp  scan_segmentation_node.cpp
